assets/style.css/style.css
@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Caveat+Brush&family=Water+Brush&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body {
    /* General styles */
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: rgb(216, 225, 187);
}
header {
    background-color: rgb(208, 197, 174);
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px rgb(12, 12, 12);
    display: flex;
    align-items: baseline;
    justify-content: space-between;
} 
#logo {
    font-family: 'water brush', Arial;
    font-weight: 300;
    text-decoration:underline;
    text-decoration-thickness: 1px;
    text-decoration-skip-ink: auto;
}
#menu {
    font-size: 115%;
    letter-spacing: 2.5px;
    list-style-type: none;
}
#menu > li {
    margin-bottom: .5rem;
}
header a {
    text-decoration: none;
    color: inherit;
    font-family: 'alex brush', sans-serif;
    font-weight: 600;
}
nav {
    position: absolute;
    background-color: rgb(208, 197, 174);
    width: 100%;
    left: 0;
    box-shadow: 0 2px 2px rgb(12, 12, 12);
    padding: 0 .5rem;
    display: none;
    top: 100%;
}
#nav-toggle:checked~nav {
    display: block;
}
#nav-toggle {
    display: none;
}
.nav-toggle-label {
    font-size: 2rem;
}
h3 {
    font-family: 'caveat brush', sans-serif;
    text-align: center;
    font-size: 45px;
}
#treatments-£ {
    background-color: rgb(208, 197, 174);
}
#treatments-£ > li {
    font-family: 'caveat brush', sans-serif;
    font-size: 30px;
    text-align: center;
    background-color: rgb(208, 197, 174);
}
main {
    background-color: rgb(216, 225, 187);
    flex: 1 0 auto;
    margin-top: 50px;
    margin-bottom: 20px;
}
#social-networks {
    background-color: rgb(208, 197, 174);
    text-align: center;
    list-style-type: none;
    padding: 15px 0;
    display: flex;
    justify-content: space-evenly;
} 
#social-networks  i {
    font-size: 200%;
}
footer {
    box-shadow: 0 0 0 2px rgb(12, 12, 12);
}
#bio {
    font-family: 'caveat brush', sans-serif;
    font-size: 30px;
    text-align: center;
    padding: 35px 700px 35px 150px;
    background-color: rgb(216, 225, 187);
}
/* Media Query Tablets and larger */
@media screen and (min-width:768px) {
    /* header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding: .5rem;
    }
    #menu {
        display:flex;
    }
    #menu > li {
        padding-left: 1rem;
    }
    .nav-toggle-label {
        display: none;
    }
    #logo {
        font-size: 280%;
        line-height: 75px;
        margin: 0 0.5rem;
    }
    main {
        background-color: rgb(216, 225, 187);
        flex: 1 0 auto;
        margin-top: 80px;
    }
}

